@@ -38,6 +38,7 @@
 <p>2014-04-05  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/webp.c: Add progress indication support to WebP writer.</li>
 <li>magick/command.c (VersionCommand): WebP support is included in
 -version output.</li>
 <li>coders/webp.c: WebP coder identifies library version and header
